# ccake

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
examples/c_project/: ccake.toml
examples/c_project_binary/: ccake.toml
examples/c_project_library/: ccake.toml
examples/cpp_project_binary/: ccake.toml
examples/cpp_project_binary/src/: main.cpp
examples/cpp_project_library/: ccake.toml
examples/multi_src_c_project_binary/: ccake.toml
examples/multi_src_c_project_binary/src1/: main.c
examples/multi_src_c_project_binary/src2/: foo.c  foo.h
hooks/: pre-commit
res/: install.ps1
sample/: ccake.toml  foo.c  foo.h  sample.c
src/: build_project.rs  command.rs  config.rs  main.rs  new_project.rs  settings.rs  terminal.rs  windows.rs
src/command/: build.rs  build_project.rs  configure.rs  init.rs  install.rs  mod.rs  new.rs  new_project.rs  run.rs
src/lib/: build_project.rs  configure.rs  constants.rs  mod.rs  new_project.rs
src/lib/global/: configure.rs  mod.rs  settings.rs
src/lib/project/: build_project.rs  config.rs  install.rs  mod.rs  new_project.rs
src/lib/terminal/: ansi.rs  mod.rs  prompt.rs
src/terminal/: ansi.rs  format.rs  prompt.rs
