# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ccake"
version = "0.1.0"
edition = "2021"

authors = [
    "Boston Vanseghi, bvanseg@gmail.com"
]
description = "CCake is a tool to make C/C++ project building and packagement a piece of cake."

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"
walkdir = "2.3.2"
dirs = "4.0.0"
log = "0.4.17"
dialoguer = "0.10.2"

[dependencies.clap]
version = "4.0.15"
features = ["cargo"]

[dependencies.simple_logger]
version = "3.0.0"
features = ["stderr"]
